<resources>
    <string name="app_name">ECOMMERCE APP</string>
    <string name="signup">SIGN UP</string>
    <string name="name">Enter Your Name</string>
    <string name="email">Enter Your Email ID</string>
    <string name="phone">Enter Your Phone Number</string>
    <string name="password">Enter Password</string>
    <string name="conf_password">Re Enter Password</string>

    <string name="welcome">WELCOME</string>
    <string name="shop">Shop</string>
    <string name="cart">Count</string>
    <string name="contact">Contact Us</string>
    <string name="back">Back</string>

    <string name="product">Products</string>
    <string name="items">Total Number of Items in Cart : </string>
    <string name="added">added to cart</string>
    <string name="not_added">already in cart</string>

    <string name="all_fields">All fields are mandatory</string>
    <string name="phone_num">Phone number must have 10 digits</string>
    <string name="pass_match">Password not matches</string>
</resources>