<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/border"
    android:padding="20dp"
    android:layout_margin="20dp"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:textStyle="bold"
        android:textSize="50sp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorPrimaryDark"
        android:id="@+id/tv"
        >

    </TextView>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:padding="15dp"
        android:hint="@string/name"
        android:background="@drawable/edit_txt"
        android:id="@+id/name"
        android:inputType="textPersonName"
        android:layout_below="@id/tv"
        >

    </EditText>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:padding="15dp"
        android:hint="@string/email"
        android:background="@drawable/edit_txt"
        android:id="@+id/email"
        android:inputType="textEmailAddress"
        android:layout_below="@id/name"
        >

    </EditText>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:padding="15dp"
        android:hint="@string/phone"
        android:background="@drawable/edit_txt"
        android:id="@+id/phone"
        android:inputType="phone"
        android:layout_below="@id/email"
        >

    </EditText>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:padding="15dp"
        android:hint="@string/password"
        android:background="@drawable/edit_txt"
        android:id="@+id/pass"
        android:inputType="textPassword"
        android:layout_below="@id/phone"
        >

    </EditText>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:padding="15dp"
        android:hint="@string/conf_password"
        android:background="@drawable/edit_txt"
        android:id="@+id/conf_pass"
        android:inputType="textPassword"
        android:layout_below="@id/pass"
        >

    </EditText>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/signup"
        android:textColor="@color/white"
        android:background="@drawable/btn"
        android:id="@+id/btn_signup"
        android:layout_below="@id/conf_pass"
        >

    </Button>

</RelativeLayout>